--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,58 @@
+body {
+    font-family: Verdana, Arial;
+    background-color: #000000;
+    color: #FFF;
+    margin: 25px 25px 0 25px;
+}
 
+h1 {
+    font-size: 48px;
+    color: blue;
+    padding: 15px;
+}
+
+h2 {
+    font-size: 32px;
+}
+
+p {
+    font-size: 24px;
+    padding-bottom: 15px;
+    padding-left: 15px;
+}
+
+/*Style the images*/
+img{
+    width: 350px;
+    border: 10px dashed black;
+}
+
+div {
+    min-height: 100px;
+    padding: 20px;
+    border: 3px solid white;
+}
+
+.red {
+    background-color: #ff1a1a;
+    text-align: right;
+    margin-left: 50px;
+    border-width: 0 0 3px 10px;
+}
+
+.blue {
+    background-color: #3333ff;
+    text-align: left;
+    margin-right: 50px;
+    border-width: 0 10px 3px 0;
+}
+
+span {
+    text-decoration: underline;
+    text-transform: uppercase;
+}
+
+footer {
+    background: #000000;
+    background: linear-gradient(90deg, #000000 0%, #0000ff 25%, #0066ff 70%, #000000 100%);
+}
